traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:1: error: Missing closing brace `}' assumed here
override def run() {
^TraversalDiagonal:1: error: expected start of definition
override def run() {
         ^TraversalDiagonal:21: error: Missing closing brace `}' assumed here
}
^